--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@
 # Ignore bundler config.
 /.bundle
 .env
-
+doc/
+.yard/*
+*.DS_Store
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
